Bug 54277 - [4.7/4.8 regression] Template class member referred to with implicit this inside lambda is incorrectly const-qualified
Summary: [4.7/4.8 regression] Template class member referred to with implicit this ins...
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: c++ (show other bugs)
Version: 4.7.0
: P3 normal
Target Milestone: 4.7.3
Assignee: Jason Merrill
URL:
Keywords: c++-lambda
: 56537 (view as bug list)
Depends on:
Blocks: lambdas
  Show dependency treegraph
 
Reported: 2012-08-15 22:21 UTC by Travis Gockel
Modified: 2022-03-11 00:32 UTC (History)
3 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2012-10-06 00:00:00


Attachments
reproduce -- fails in 4.7.0, works in 4.6.3 (118 bytes, text/x-c++src)
2012-08-15 22:21 UTC, Travis Gockel
Details
patch (1.42 KB, patch)
2013-02-15 19:25 UTC, Jason Merrill
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Travis Gockel 2012-08-15 22:21:12 UTC
Created attachment 28025 [details]
reproduce -- fails in 4.7.0, works in 4.6.3

When a template class attempts to call a member's member function inside of a lambda function AND the member is referred to through an implicit this, the member will be erroneously const-qualified.

    struct Used
    {
        void foo() { }
    };

    template <typename>
    struct S
    {
        Used x;

        void bar()
        {
            auto f = [this] { x.foo(); };
            f();
        }
    };

Yields the following compilation error with g++ 4.7:

capture-this-const.cpp: In lambda function:
capture-this-const.cpp:13:27: error: no matching function for call to ‘Used::foo() const’
capture-this-const.cpp:13:27: note: candidate is:
capture-this-const.cpp:3:7: note: void Used::foo() <near match>
capture-this-const.cpp:3:7: note:   no known conversion for implicit ‘this’ parameter from ‘const Used*’ to ‘Used*’

---

This can be compiled properly by explicitly adding this->:

            auto f = [this] { this->x.foo(); };

---

$> g++ -v
Using built-in specs.
COLLECT_GCC=g++-4.7
COLLECT_LTO_WRAPPER=/usr/lib/gcc/x86_64-linux-gnu/4.7/lto-wrapper
Target: x86_64-linux-gnu
Configured with: ../src/configure -v --with-pkgversion='Ubuntu/Linaro 4.7.0-7ubuntu3' --with-bugurl=file:///usr/share/doc/gcc-4.7/README.Bugs --enable-languages=c,c++,go,fortran,objc,obj-c++ --prefix=/usr --program-suffix=-4.7 --enable-shared --enable-linker-build-id --with-system-zlib --libexecdir=/usr/lib --without-included-gettext --enable-threads=posix --with-gxx-include-dir=/usr/include/c++/4.7 --libdir=/usr/lib --enable-nls --disable-bootstrap --with-sysroot=/ --enable-clocale=gnu --enable-libstdcxx-debug --enable-libstdcxx-time=yes --enable-gnu-unique-object --enable-plugin --enable-objc-gc --disable-werror --with-arch-32=i686 --with-tune=generic --enable-checking=release --build=x86_64-linux-gnu --host=x86_64-linux-gnu --target=x86_64-linux-gnu
Thread model: posix
gcc version 4.7.0 (Ubuntu/Linaro 4.7.0-7ubuntu3)
Comment 1 Daniel Krügler 2012-08-16 06:24:26 UTC
The problem still exists in gcc 4.8.0 20120729 (experimental)
Comment 2 Leo Yuriev 2012-08-29 14:54:15 UTC
+1, just confirm
Comment 3 Jason Merrill 2013-02-15 19:25:31 UTC
Created attachment 29472 [details]
patch

I'll be checking this in after 4.8 branches.
Comment 4 Martin von Gagern 2013-03-05 14:10:14 UTC
*** Bug 56537 has been marked as a duplicate of this bug. ***
Comment 5 Jason Merrill 2013-03-17 02:41:35 UTC
Author: jason
Date: Sun Mar 17 02:41:22 2013
New Revision: 196747

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=196747
Log:
	PR c++/54277
	* cp-tree.h (WILDCARD_TYPE_P): Split out from...
	(MAYBE_CLASS_TYPE_P): ...here.
	* semantics.c (lambda_capture_field_type): Only build a
	magic decltype for wildcard types.
	(lambda_proxy_type): Likewise.
	(finish_non_static_data_member): Get the quals from
	the object.

Added:
    trunk/gcc/testsuite/g++.dg/cpp0x/lambda/lambda-this9.C
Modified:
    trunk/gcc/cp/ChangeLog
    trunk/gcc/cp/cp-tree.h
    trunk/gcc/cp/semantics.c
Comment 6 Jason Merrill 2013-03-23 16:57:12 UTC
Fixed for 4.7.3.