	PR c++/54277 	* cp-tree.h (WILDCARD_TYPE_P): Split out from... 	(MAYBE_CLASS_TYPE_P): ...here. 	* semantics.c (lambda_capture_field_type): Only build a 	magic decltype for wildcard types. 	(lambda_proxy_type): Likewise. 	(finish_non_static_data_member): Get the quals from 	the object.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@196747 138bc75d-0d04-0410-961f-82ee72b054a4